--- a/_config.yml
+++ b/_config.yml
@@ -34,13 +34,18 @@ header_pages:
 
 base_repo_url: "https://github.com/Edinburgh-College-of-Art/"
 
-repos: [{name: "Architectural Design 3: Unit 3", url: architectural-design-unit-3},
-{name: "Connected Things", url: Connected-Things},
-{name: "Electronic Things", url: Electronic-Things},
-{name: "Histories and Futures of Technology", url: Histories-and-Futures-of-Technology },
-{name: "Dynamic Web Design", url: dynamic-web-design  },
-{name: "Audio programming", url: audio-programming  }
+repos: [{name: "Architectural Design 3: Unit 3", repo: architectural-design-unit-3, site: true, url: ad3},
+{name: "Connected Things", repo: Connected-Things, site: false},
+{name: "Electronic Things", repo: Electronic-Things, site: false},
+{name: "Histories and Futures of Technology", repo: Histories-and-Futures-of-Technology, site: false },
+{name: "Dynamic Web Design", repo: dynamic-web-design, site: true, url: dwd},
+{name: "Audio programming", repo: audio-programming, site: false  }
 ]
+
+collections:
+  courses:
+    output: true
+
 
 gems: [jekyll_github_sample]
 # paginate: 5
